infrastructure/gcp-0/agentgateway-poc/mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agent-mcp
  namespace: agw-poc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: agent-router-agw
      sectionName: public
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: agent-mcp
